- add host to name. - fix template - add options

--- a/Resources/templates/ssh_config.twig
+++ b/Resources/templates/ssh_config.twig
@@ -1,4 +1,11 @@
 {% for host in config %}
-Host {{ host.Host }}
+Host {{ host.Host }}_{{ host.hostname }}
     hostname {{ host.hostname }}
+{% if host.User %}
+    User {{ host.User }}
+{% endif %}
+{% if host.IdentityFile %}
+    IdentityFile {{ host.IdentityFile }}
+{% endif %}
+
 {% endfor %}
