add hostkey check config.

--- a/Resources/templates/ssh_config.twig
+++ b/Resources/templates/ssh_config.twig
@@ -1,3 +1,6 @@
+{% if NoStrictHostKeyChecking %}
+StrictHostKeyChecking no
+{% endif %}
 {% for host in config %}
 Host {{ host.Host }}_{{ host.hostname }}
     hostname {{ host.hostname }}
